--- a/imgs.cabal
+++ b/imgs.cabal
@@ -1,5 +1,5 @@
 name:                imgs
-version:             0.1.0
+version:             0.3.0
 synopsis:            A minimalistic image album file server
 description:         Please see README.md
 homepage:            https://github.com/soupi/imgs#readme
@@ -49,7 +49,10 @@ executable imgs
   hs-source-dirs:      app
   main-is:             Main.hs
   default-language:    Haskell2010
+  -- uncomment for static executable
+  -- ghc-options: -Wall -static -optl-static -optl-pthread -fPIC -threaded -rtsopts -with-rtsopts=-N
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+
   build-depends:       base >= 4.7 && < 5
                      , imgs
 
